# X-RAY

./: .gitignore  ARCHITECTURE.md  README.md  Untitled Diagram.drawio  architecture.mmd  architecure.txt  main.cpp
X-Ray/: CMakeLists.txt  build.bat  project_config.json
X-Ray/Config/: config.json.example
X-Ray/include/xray/: collector.hpp  config_manager.hpp  llm_client.hpp  smart_analyzer.hpp  types.hpp  ui.hpp  version.hpp
X-Ray/src/: collector.cpp  config_manager.cpp  llm_client.cpp  main.cpp  ui.cpp
